TM-13575 Fix Fix the ANY/ALL toggle control to remove the bleed-over in a few places

--- a/web-app/tds/web-app/css/shared/components/tds-asset-tag-selector.sass
+++ b/web-app/tds/web-app/css/shared/components/tds-asset-tag-selector.sass
@@ -22,16 +22,15 @@
                 font-weight: 600
                 margin-top: 1px
                 margin-left: 1px
+                max-width: 150px
+                white-space: nowrap
+                overflow: hidden
+                text-overflow: ellipsis
             span.k-select
               span.k-i-close
                 margin-left: -26px
       span.k-clear-value
         display: none !important
-  // When switch is On/Off. Note: Kendo use same class as inner and outside
-  .k-switch.asset-tag.k-switch-off .k-switch-handle
-    margin-left: 4px !important
-  .k-switch.asset-tag.k-switch-on .k-switch-handle
-    margin-left: -4px !important
   // -------------------------------------------------------------------
   .k-switch.asset-tag
     width: 50px
